--- a/Classes/CompanyViewController.xib
+++ b/Classes/CompanyViewController.xib
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="16"/>
+			<integer value="1"/>
 			<integer value="10"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
@@ -50,7 +50,7 @@
 					<object class="IBUILabel" id="592381345">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{195, 125}</string>
+						<string key="NSFrameSize">{220, 100}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="567185113">
 							<int key="NSColorSpace">3</int>
@@ -79,7 +79,7 @@
 							<object class="IBUILabel" id="727651201">
 								<reference key="NSNextResponder" ref="931002531"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{125, 125}</string>
+								<string key="NSFrameSize">{100, 100}</string>
 								<reference key="NSSuperview" ref="931002531"/>
 								<reference key="IBUIBackgroundColor" ref="567185113"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -93,7 +93,7 @@
 								<int key="IBUITextAlignment">1</int>
 							</object>
 						</object>
-						<string key="NSFrame">{{195, 0}, {125, 125}}</string>
+						<string key="NSFrame">{{220, 0}, {100, 100}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -109,7 +109,7 @@
 							<object class="IBUIScrollView" id="543991769">
 								<reference key="NSNextResponder" ref="1066788612"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{0, 49}, {320, 206}}</string>
+								<string key="NSFrameSize">{320, 236}</string>
 								<reference key="NSSuperview" ref="1066788612"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -121,7 +121,7 @@
 								<reference key="NSNextResponder" ref="1066788612"/>
 								<int key="NSvFlags">1316</int>
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
-								<string key="NSFrame">{{0, 255}, {320, 36}}</string>
+								<string key="NSFrame">{{0, 236}, {320, 36}}</string>
 								<reference key="NSSuperview" ref="1066788612"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -130,23 +130,8 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<int key="IBUINumberOfPages">3</int>
 							</object>
-							<object class="IBUILabel" id="36184321">
-								<reference key="NSNextResponder" ref="1066788612"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{0, 20}, {320, 21}}</string>
-								<reference key="NSSuperview" ref="1066788612"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="IBUIText">Brand Category</string>
-								<reference key="IBUITextColor" ref="697835025"/>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">1</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<int key="IBUITextAlignment">1</int>
-							</object>
 						</object>
-						<string key="NSFrame">{{0, 125}, {320, 291}}</string>
+						<string key="NSFrame">{{0, 100}, {320, 272}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -158,7 +143,7 @@
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 					</object>
 				</object>
-				<string key="NSFrameSize">{320, 416}</string>
+				<string key="NSFrameSize">{320, 372}</string>
 				<reference key="NSSuperview"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -169,6 +154,7 @@
 				<object class="IBUISimulatedNavigationBarMetrics" key="IBUISimulatedTopBarMetrics">
 					<bool key="IBUIPrompted">NO</bool>
 				</object>
+				<object class="IBUISimulatedToolbarMetrics" key="IBUISimulatedBottomBarMetrics"/>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -271,8 +257,8 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="592381345"/>
-							<reference ref="931002531"/>
 							<reference ref="1066788612"/>
+							<reference ref="931002531"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -293,20 +279,6 @@
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="931002531"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="727651201"/>
-						</object>
-						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="727651201"/>
-						<reference key="parent" ref="931002531"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
 						<reference key="object" ref="654204983"/>
 						<reference key="parent" ref="0"/>
@@ -318,9 +290,9 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="543991769"/>
 							<reference ref="922859188"/>
-							<reference ref="36184321"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
+						<string key="objectName">pageView</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
@@ -339,9 +311,19 @@
 						<string key="objectName">data</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">23</int>
-						<reference key="object" ref="36184321"/>
-						<reference key="parent" ref="1066788612"/>
+						<int key="objectID">5</int>
+						<reference key="object" ref="931002531"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="727651201"/>
+						</object>
+						<reference key="parent" ref="191373211"/>
+						<string key="objectName">scoreColor</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">7</int>
+						<reference key="object" ref="727651201"/>
+						<reference key="parent" ref="931002531"/>
 					</object>
 				</object>
 			</object>
@@ -360,7 +342,6 @@
 					<string>16.IBPluginDependency</string>
 					<string>17.CustomClassName</string>
 					<string>17.IBPluginDependency</string>
-					<string>23.IBPluginDependency</string>
 					<string>4.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
@@ -370,7 +351,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>CompanyViewController</string>
 					<string>UIResponder</string>
-					<string>{{363, 450}, {320, 480}}</string>
+					<string>{{700, 492}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>PagingScrollViewController</string>
 					<string>{{0, 665}, {320, 480}}</string>
@@ -378,7 +359,6 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>DataSource</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
